--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,5 +13,7 @@ jobs:
       image: vapor/swift:5.2-bionic
     steps:
     - uses: actions/checkout@v2
+    - name: Install libssl-dev
+      run: sudo apt-get install libssl-dev
     - name: Run Tests
       run: swift test --enable-test-discovery -v
