--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,6 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: vapor/swift:5.2-bionic
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PORT: 5433
+          POSTGRES_DB: swiftpackageindex_test
+          POSTGRES_USER: swiftpackageindex
+          POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
     - uses: actions/checkout@v2
     - name: Install libssl-dev
