--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,8 +18,6 @@ jobs:
           POSTGRES_DB: swiftpackageindex_test
           POSTGRES_USER: swiftpackageindex
           POSTGRES_PASSWORD: password
-        ports:
-          - 5433:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -32,3 +30,5 @@ jobs:
       run: apt-get update && apt-get install libssl-dev
     - name: Run tests
       run: swift test --enable-test-discovery -v
+      env:
+        DATABASE_PORT: 5432
