At the stage of trying anything, no matter how unlikely.

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,11 +18,9 @@ jobs:
           POSTGRES_DB: swiftpackageindex_test
           POSTGRES_USER: swiftpackageindex
           POSTGRES_PASSWORD: password
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
