--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Connect to PostgreSQL
         # Runs a script that creates a PostgreSQL client, populates
         # the client with data, and retrieves data
-        run: node client.js
+        run: node test.js
         # Environment variable used by the `client.js` script to create
         # a new PostgreSQL client.
         env:
