--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,26 +22,11 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-      # Downloads a copy of the code in your repository before running CI tests
-      - name: Check out repository code
-        uses: actions/checkout@v2
-
-      - name: Install node
-        run: apt install nodejs
-
-      # Performs a clean installation of all dependencies in the `package.json` file
-      # For more information, see https://docs.npmjs.com/cli/ci.html
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Connect to PostgreSQL
-        # Runs a script that creates a PostgreSQL client, populates
-        # the client with data, and retrieves data
-        run: node test.js
-        # Environment variable used by the `client.js` script to create
-        # a new PostgreSQL client.
-        env:
-          # The hostname used to communicate with the PostgreSQL service container
-          POSTGRES_HOST: localhost
-          # The default PostgreSQL port
-          POSTGRES_PORT: 5432
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Install libssl-dev
+      run: apt-get update && apt-get install libssl-dev
+    - name: Run tests
+      run: swift test --enable-test-discovery -v
+      env:
+        DATABASE_PORT: 5432
