Specify a specific version of Postgres.

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,14 +13,18 @@ jobs:
       image: vapor/swift:5.2-bionic
     services:
       postgres:
-        image: postgres
+        image: postgres:12
         env:
           POSTGRES_DB: swiftpackageindex_test
           POSTGRES_USER: swiftpackageindex
           POSTGRES_PASSWORD: password
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
