--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -29,11 +29,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Install libssl-dev
-      run: apt-get update && apt-get install libssl-dev postgresql-client -y
-    - name: Run a Postgres connection test
-      run: pg_isready -h postgres -p 5432
+      run: apt-get update && apt-get install libssl-dev -y
     - name: Run tests
-      run: swift test --enable-test-discovery -v
+      run: swift test --enable-test-discovery -v > test_output.txt
       env:
         DATABASE_HOST: postgres
         DATABASE_PORT: 5432
+    - name: Upload test output
+      if: always()
+      uses: actions/upload-artifact@v1
+      with:
+        name: Test output
+        path: test_output.txt
