--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Run swiftlint
         uses: norio-nomura/action-swiftlint@3.1.0
+        with:
+          args: --strict
   test:
     runs-on: ubuntu-latest
     container:
