--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -17,6 +18,7 @@ jobs:
         with:
           args: --strict
   test:
+    name: Test
     runs-on: ubuntu-latest
     container:
       image: vapor/swift:5.2-bionic
