--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 DATABASE_HOST=localhost
-DATABASE_USERNAME=spmidx_dev
+DATABASE_USERNAME=spi_dev
 DATABASE_PASSWORD=xxx
-DATABASE_NAME=spmidx_dev
+DATABASE_NAME=spi_dev
