--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ x-shared_environment: &shared_environment
 
 services:
   app:
-    image: SPMidx:latest
+    image: spi-server:latest
     build:
       context: .
     environment:
@@ -39,7 +39,7 @@ services:
       - '8080:80'
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "80"]
   migrate:
-    image: SPMidx:latest
+    image: spi-server:latest
     build:
       context: .
     environment:
@@ -50,7 +50,7 @@ services:
     deploy:
       replicas: 0
   revert:
-    image: SPMidx:latest
+    image: spi-server:latest
     build:
       context: .
     environment:
