--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,5 @@
 DATABASE_HOST=localhost
-DATABASE_USERNAME=spi_dev
+DATABASE_PORT=5433
+DATABASE_USERNAME=spi_test
 DATABASE_PASSWORD=xxx
-DATABASE_NAME=spi_dev
+DATABASE_NAME=spi_test
