--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Install docker
-        run: |
-          apt-get update
-          apt-get install apt-transport-https ca-certificates curl software-properties-common -y
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-          add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
-          apt-get update
-          apt-get install docker-ce -y
       - name: Run tests
-        run: make test-docker
+        run: make test
         env:
           DATABASE_HOST: postgres
           DATABASE_PORT: 5433
