--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
       postgres:
         image: postgres:12
         env:
-          POSTGRES_DB: spi_dev
-          POSTGRES_USER: spi_dev
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
           POSTGRES_PASSWORD: xxx
         ports:
           - 5432:5432
