--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           POSTGRES_USER: spi_test
           POSTGRES_PASSWORD: xxx
         ports:
-          - 5433:5432
+          - '5433:5432'
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -29,7 +29,7 @@ jobs:
         run: make test
         env:
           DATABASE_HOST: postgres
-          DATABASE_PORT: 5433
+          DATABASE_PORT: '5433'
 
   # test-macos:
   #   name: Test macOS
