--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ x-shared_environment: &shared_environment
 
 services:
   app:
-    image: spi:latest
+    image: finestructure/spi-server:latest
     build:
       context: .
     environment:
@@ -40,7 +40,7 @@ services:
       - '8080:80'
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "80"]
   migrate:
-    image: spi:latest
+    image: finestructure/spi-server:latest
     build:
       context: .
     environment:
@@ -51,7 +51,7 @@ services:
     deploy:
       replicas: 0
   revert:
-    image: spi:latest
+    image: finestructure/spi-server:latest
     build:
       context: .
     environment:
