--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,6 @@ services:
 
 
 before_script:
-  - docker info
   - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
 
     
@@ -41,7 +40,8 @@ build-tag:
     stage: deploy
     tags:
         - spi
-    script: |  
+        - shell
+    script: |
       VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
       env VERSION=$VERSION docker-compose up -d app
       # TODO: run worker
