--- a/docker-compose.ops.yml
+++ b/docker-compose.ops.yml
@@ -7,8 +7,15 @@ version: '3.7'
 
 
 x-shared: &shared
-  env_file:
-    - .env
+  environment:
+    CHECKOUTS_DIR: ${CHECKOUTS_DIR}
+    DATABASE_HOST: ${DATABASE_HOST}
+    DATABASE_PORT: ${DATABASE_PORT}
+    DATABASE_NAME: ${DATABASE_NAME}
+    DATABASE_USERNAME: ${DATABASE_USERNAME}
+    DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+    GITHUB_TOKEN: ${GITHUB_TOKEN}
+    LOG_LEVEL: ${LOG_LEVEL}
 
 
 services:
