--- a/docker-compose.commands.yml
+++ b/docker-compose.commands.yml
@@ -8,6 +8,8 @@ version: '3.7'
 
 x-shared: &shared
   environment:
+    # set these variables via the environment or a `.env` file, which
+    # docker-compose reads and uses to populate variables
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
     DATABASE_HOST: ${DATABASE_HOST}
     DATABASE_PORT: ${DATABASE_PORT}
@@ -18,10 +20,6 @@ x-shared: &shared
     LOG_LEVEL: ${LOG_LEVEL}
 
 
-volumes:
-  checkouts:
-
-    
 services:
   reconcile:
     image: finestructure/spi-server:latest
@@ -45,3 +43,7 @@ services:
     command: ["analyze", "--limit", "${LIMIT:-10}"]
     deploy:
       replicas: 0
+
+
+volumes:
+  checkouts:
