--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ version: '3.7'
 
 x-shared: &shared
   environment:
+    # set these variables via the environment or a `.env` file, which
+    # docker-compose reads and uses to populate variables
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
     DATABASE_HOST: ${DATABASE_HOST}
     DATABASE_PORT: ${DATABASE_PORT}
