--- a/docker-compose.ops.yml
+++ b/docker-compose.ops.yml
@@ -22,14 +22,14 @@ x-shared: &shared
 
 services:
   migrate:
-    image: finestructure/spi-server:latest
+    image: finestructure/spi-server:${VERSION}
     <<: *shared
     command: ["migrate", "--yes"]
     deploy:
       replicas: 0
 
   revert:
-    image: finestructure/spi-server:latest
+    image: finestructure/spi-server:${VERSION}
     <<: *shared
     command: ["migrate", "--revert", "--yes"]
     deploy:
