--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ stages:
 build-sha:
     stage: build
     script:
+      - echo 'let appVersion = "'${IMAGE_SHA}'"' > ./Sources/App/Core/AppVersion.swift
       - docker build -t $IMAGE_SHA .
       - docker push $IMAGE_SHA
     
