--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ x-shared: &shared
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
+    ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     LOG_LEVEL: ${LOG_LEVEL}
   volumes:
     - checkouts:/checkouts
