--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,10 +46,11 @@ build-tag:
     script: |
       VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
       apk add --no-cache curl
-      curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "revision": "'"$VERSION"'", "status": "started"}' https://api.rollbar.com/api/1/deploy
       env VERSION=$VERSION docker-compose up -d
       if [[ $? == 0 ]]; then
         curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "revision": "'"$VERSION"'", "status": "started"}' https://api.rollbar.com/api/1/deploy
+      else
+        curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "revision": "'"$VERSION"'", "status": "failed"}' https://api.rollbar.com/api/1/deploy
       fi
   
   
