--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,19 @@ services:
       # TODO: don't expose port - add ssh container for tunnelling
       - '5432:5432'
 
+  sshd:
+    image: registry.gitlab.com/finestructure/spi-sshd:0.0.1
+    ports:
+      - "2222:22"
+    configs:
+      - source: authorized_keys
+        target: /root/.ssh/authorized_keys
+        mode: 0400
+
 volumes:
   db_data:
   checkouts:
+
+configs:
+  authorized_keys:
+    file: "$authorized_keys"
