--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,10 +86,8 @@ services:
 
   sshd:
     image: registry.gitlab.com/finestructure/spi-sshd:0.0.1
-    command: |
-      echo ${authorized_keys} > /root/.ssh/authorized_keys
-      chmod 0400 /root/.ssh/authorized_keys
-      ssh-start ssh-server
+    entrypoint: ["/bin/bash"]
+    command: ["-c", "--", "echo ${authorized_keys} > /root/.ssh/authorized_keys && chmod 0400 /root/.ssh/authorized_keys && ssh-start ssh-server"]
     ports:
       - "2222:22"
 
