--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install unzip
-        run: apt-get install unzip
+        run: apt-get update && apt-get install -y unzip
       - name: Run tests
         run: make test
         env:
