--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
     image: grafana/promtail:1.5.0
     command: -config.file=/etc/promtail/docker-config.yaml
     volumes:
-      - /var/log:/var/log
+      - /var/lib/docker/containers:/var/log
 
 volumes:
   db_data:
