--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,11 +100,12 @@ services:
     image: grafana/loki:1.5.0
     command: -config.file=/etc/loki/local-config.yaml
 
-  # promtail:
-  #   image: grafana/promtail:1.5.0
-  #   command: -config.file=/etc/promtail/docker-config.yaml
-  #   volumes:
-  #     - /var/lib/docker/containers:/var/log
+  promtail:
+    image: grafana/promtail:1.5.0
+    command: -config.file=/promtail.yaml
+    volumes:
+      - ./promtail-config.yaml:/promtail.yaml
+      - /var/lib/docker/containers:/var/log
 
 volumes:
   db_data:
