--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,8 +104,8 @@ services:
     image: grafana/promtail:1.5.0
     volumes:
       - /var/lib/docker/containers:/var/log
-      - ./promtail-config.yaml:/etc/promtail/promtail.yaml
-    command: -config.file=/etc/promtail/promtail.yaml
+      - ./promtail.yaml:/foo.yaml
+    command: -config.file=/foo.yaml
 
 volumes:
   db_data:
