--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,4 +69,4 @@ smoke-test:
   stage: build
   when: manual
   script:
-    - docker run --rm -t -e $base_url="$SITE_URL" restfiles/smoke-test.restfile
+    - docker run --rm -t -e base_url="$SITE_URL" restfiles/smoke-test.restfile
