--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,4 +69,4 @@ smoke-test:
   stage: build
   when: manual
   script:
-    - docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w host finestructure/rester:0.7.2 restfiles/smoke-test.restfile
+    - docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w /host finestructure/rester:0.7.2 restfiles/smoke-test.restfile
