--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,11 @@ deploy (ad hoc): &deploy
   when: manual
 
 smoke-test:
-  stage: smoke-test
-  script:
-    - docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w /host finestructure/rester:0.7.2 restfiles/smoke-test.restfile
+  # stage: smoke-test
+  stage: build
+  script: |
+    rester() {
+      docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w /host finestructure/rester:0.7.2
+    }
+    rester restfiles/smoke-test.restfile
+    rester restfiles/package-test.restfile
