--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,7 @@ deploy (ad hoc): &deploy
   when: manual
 
 smoke-test:
-  # stage: smoke-test
-  stage: build
+  stage: smoke-test
   script: |
     rester() {
       docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w /host finestructure/rester:0.7.2 "$1"
