--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,4 +71,4 @@ smoke-test:
       docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w /host finestructure/rester:0.7.2 "$1"
     }
     rester restfiles/smoke-test.restfile
-    rester restfiles/package-test.restfile
+    rester restfiles/active-packages-test.restfile
