--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,12 +45,20 @@ build-tag:
     - deploy
   script: |
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
+    # install curl and set up alias to post deployment to rollbar
     apk add --no-cache curl
+    rollbar() {
+      curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "local_username": "CI", "revision": "'"$VERSION"'", "status": "'"$1"''"}' https://api.rollbar.com/api/1/deploy
+    }
+    # migrate
+    docker-compose up -d db
+    env VERSION=$VERSION docker-compose -f docker-compose.yml -f docker-compose.ops.yml run migrate
+    # deploy
     env VERSION=$VERSION docker-compose up -d
     if [[ $? == 0 ]]; then
-      curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "local_username": "CI", "revision": "'"$VERSION"'", "status": "succeeded"}' https://api.rollbar.com/api/1/deploy
+      rollbar succeeded
     else
-      curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "local_username": "CI", "revision": "'"$VERSION"'", "status": "failed"}' https://api.rollbar.com/api/1/deploy
+      rollbar failed
     fi
   
   
