--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ x-shared: &shared
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
-    ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     LOG_LEVEL: ${LOG_LEVEL}
+    ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
+    SITE_URL: ${SITE_URL}
   volumes:
     - checkouts:/checkouts
 
