Use same db version as local tests & prod

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       image: swift:5.2.4-bionic
     services:
       postgres:
-        image: postgres:12
+        image: postgres:12.1-alpine
         env:
           POSTGRES_DB: spi_test
           POSTGRES_USER: spi_test
