Disable ad-hoc deployment until we have staging

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,11 +72,13 @@ deploy:
   <<: *deploy-common
   only:
     - tags
+  except:
+    - schedules
   
   
-deploy (ad hoc): &deploy
-  <<: *deploy-common
-  when: manual
+# deploy (ad hoc): &deploy
+#   <<: *deploy-common
+#   when: manual
 
 
 smoke-test:
